# walkerdog-tic2b

./: 狗溜人PRD.docx
dogwalker/: AGENTS.md  DEVELOPER_GUIDE.md  README.md  requirements.txt
dogwalker/backend/: __init__.py  api.py  robot_controller.py  state.py
dogwalker/ros/dogwalker_core/: CMakeLists.txt  package.xml
dogwalker/ros/dogwalker_core/launch/: navigation_demo.launch
dogwalker/ros/dogwalker_core/scripts/: controller.py  web_server.py
dogwalker/ui/: __init__.py  app.py
